[tool.poetry]
name = "002-streamlit-blog-post-generator"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.37.0"
langchain = ">=0.3.26,<1.0.0"
langchain-community = ">=0.3.27,<0.4.0"
openai = "^1.99.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
